--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,39 +1,52 @@
-<p>
-  <br />
-  test works!{{test}}
-  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}  <br />
-  test works!{{test}}
-</p>
+        <!-- comments -->
+        <!-- <input type="radio" id="comment" name="tablist" />
+        <div class="tabitem commentlist">
+          <div class="commentbox clearfix">
+            <textarea name="" id="" cols="30" rows="10" maxlength="140"></textarea>
+            <span class="wordslen">140</span>
+            <a href="javascript:void(0);" class="btn emoji"><i class="fa fa-smile-o" aria-hidden="true"></i></a>
+            <a href="javascript:void(0);" class="btn at"><i class="fa fa-at" aria-hidden="true"></i></a>
+            <a href="javascript:void(0);" class="btn comment">评论</a>
+          </div>
+          <div class="commenttable">
+            <div class="comment new">
+              <div class="title">最新评论(0)</div>
+              <div class="content">
+                <p>未获取到评论</p>
+                <p><span class="username"><a href="javascript:void(0);"></a></span><span class="usersay"></span></p>
+                <div class="btngroups clearfix">
+                  <span class="time"></span>
+                  <span class="btn">
+                        <a href="javascript:void(0);" class="btn_report">举报</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                        <a href="javascript:void(0);" class="btn_support"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>(0)</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                        <a href="javascript:void(0);" class="btn_share">分享</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                        <a href="javascript:void(0);" class="btn_reply">回复</a>
+                      </span>
+                </div>
+                <div class="userface"><a href="javascript:void(0);"><img src="/assets/images/user_face.png" alt="" /></a></div>
+              </div>
+            </div>
+            <div class="comment prefect">
+              <div class="title">精彩评论(0)</div>
+              <div class="content">
+                <p style="color:#ccc;">-- 暂无评论 --</p>
+              </div>
+            </div>
+          </div>
+        </div> -->
+        <!-- followers -->
+        <!-- <input type="radio" id="follower" name="tablist" />
+        <div class="tabitem followerlist">
+          <figure>
+            <a href="javascript:void(0);"><img src="/assets/images/user_face.png" alt="" /></a>
+            <figcaption><a href="javascript:void(0);">-USERNAME-</a></figcaption>
+          </figure>
+          <figure>
+            <a href="javascript:void(0);"><img src="/assets/images/user_face.png" alt="" /></a>
+            <figcaption><a href="javascript:void(0);">-USERNAME-</a></figcaption>
+          </figure>
+          <figure>
+            <a href="javascript:void(0);"><img src="/assets/images/user_face.png" alt="" /></a>
+            <figcaption><a href="javascript:void(0);">-USERNAME-</a></figcaption>
+          </figure>
+        </div> -->
