--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     </h1>
   </div>
   <div class="menu_search">
-    <input type="text" placeholder="探索音乐、歌手、歌词、用户" autofocus="" id="inpSearch" class="search_inp" [(ngModel)]="search" (keyup.enter)="searchChange()"  />
+    <input type="text" placeholder="探索音乐、歌手" autofocus="" id="inpSearch" class="search_inp" [(ngModel)]="search" (keyup.enter)="searchChange()"  />
     <span class="search_btn" id="top_searchBtn"><i class="fa fa-search" aria-hidden="true" (click)="searchChange()"></i></span>
   </div>
 </div>
