--- a/src/app/explore-content/explore-content.component.html
+++ b/src/app/explore-content/explore-content.component.html
@@ -3,7 +3,7 @@
       <div class="listcontainer">
         <div class="listinfo clearfix">
           <div class="info_listpic">
-            <img src="{{ exploreResults[0].coverImgUrl || '/assets/images/temp_pic001.jpg'}}" alt="" />
+            <img src="{{ exploreResults[0].coverImgUrl || 'assets/images/temp_pic001.jpg'}}" alt="" />
           </div>
           <div class="info_detailtext">
             <div class="playinfo">
@@ -15,7 +15,7 @@
               <span class="listname">精选歌单系列</span>
             </div>
             <div class="detail_time">
-              <span class="userpic"><a href="javascript:void(0);"><img src="/assets/images/user_face.png" alt="" /></a></span>
+              <span class="userpic"><a href="javascript:void(0);"><img src="assets/images/user_face.png" alt="" /></a></span>
               <span class="username"><a href="javascript:void(0);">Jason</a></span>
               <span class="createtime">{{ '2017-08-08' | date:'yyyy-MM-dd'}}</span>
               <span>整理收集</span>
