--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -33,7 +33,7 @@
   <!-- 全屏小窗歌词 -->
   <div class="playlist_smallwindow clearfix">
     <div class="poster" id="btnExpandPlayBox">
-      <img src="{{ myMusicPlayer.musicPic || '/assets/images/temp_pic001.jpg' }}" alt="" id="smallwindow_albumPic" />
+      <img src="{{ myMusicPlayer.musicPic || 'assets/images/temp_pic001.jpg' }}" alt="" id="smallwindow_albumPic" />
       <div class="poster_hoverback"><i class="fa fa-expand" aria-hidden="true" (click)="expandLyric()"></i></div>
     </div>
     <div class="info">
@@ -55,7 +55,7 @@
     <div class="listcontainer">
       <div class="listinfo clearfix">
         <div class="info_listpic">
-          <img src="{{playLists.coverImgUrl || '/assets/images/temp_pic001.jpg'}}" alt="" id="playlist_listPic" />
+          <img src="{{playLists.coverImgUrl || 'assets/images/temp_pic001.jpg'}}" alt="" id="playlist_listPic" />
         </div>
         <div class="info_detailtext">
           <div class="playinfo">
@@ -67,7 +67,7 @@
             <span class="listname" id="playlist_listName">{{playLists.name}}</span>
           </div>
           <div class="detail_time">
-            <span class="userpic"><a href="javascript:void(0);"><img src="{{playLists.creator.avatarUrl || '/assets/images/user_face.png'}}" alt="" id="playlist_userFace" /></a></span>
+            <span class="userpic"><a href="javascript:void(0);"><img src="{{playLists.creator.avatarUrl || 'assets/images/user_face.png'}}" alt="" id="playlist_userFace" /></a></span>
             <span class="username"><a href="javascript:void(0);" id="playlist_userName">{{playLists.creator.nickname}}</a></span>
             <span class="createtime" id="playlist_createTime">{{playLists.createTime | date: 'yyyy-MM-dd' }}</span>
             <span>创建</span>
@@ -174,15 +174,15 @@
 <!-- 歌词详情页 -->
 <div class="page_songdetail" id="pageSongDetail" [ngStyle]="lyricStyles">
   <!-- 模糊背景 -->
-  <div class="g_blurbg" id="bgBlur" style="background-image:url('/assets/images/al8.png');"></div>
+  <div class="g_blurbg" id="bgBlur" style="background-image:url('assets/images/al8.png');"></div>
   <div class="maincontainer clearfix">
     <div class="compressbtn" id="btnCompressPlayBox" title="收起歌词">
       <i class="fa fa-compress" aria-hidden="true" (click)="expandLyric()"></i>
     </div>
     <div class="discsection">
-      <div class="disc_needle" id="discNeedle" [class.play]="!musicPlayer.paused"><img src="/assets/images/needle.png" alt=""></div>
-      <div [class.disPlay]="!musicPlayer.paused" [class.disPaused]="musicPlayer.paused" class="disc_arc" id="bgDisc" style="background-image:url('/assets/images/al8.png');">
-        <div class="poster"><img src="/assets/images/disc-o.png" alt=""></div>
+      <div class="disc_needle" id="discNeedle" [class.play]="!musicPlayer.paused"><img src="assets/images/needle.png" alt=""></div>
+      <div [class.disPlay]="!musicPlayer.paused" [class.disPaused]="musicPlayer.paused" class="disc_arc" id="bgDisc" style="background-image:url('assets/images/al8.png');">
+        <div class="poster"><img src="assets/images/disc-o.png" alt=""></div>
       </div>
       <div class="disc_btns">
         <span class="btn playall"><i class="fa fa-heart-o" aria-hidden="true"></i>&nbsp;&nbsp;喜欢</span>
