--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -36,7 +36,7 @@
     <div class="playlist_smallwindow clearfix">
       <div class="poster" id="btnExpandPlayBox">
         <img src="{{ myMusicPlayer.musicPic || 'assets/images/temp_pic001.jpg' }}" alt="" id="smallwindow_albumPic" />
-        <div class="poster_hoverback"><i class="fa fa-expand" aria-hidden="true" (click)="expandLyric()"></i></div>
+        <div class="poster_hoverback"><i class="fa fa-expand" aria-hidden="true"></i></div>
       </div>
       <div class="info">
         <p class="songname" id="smallwindow_songName">-{{ myMusicPlayer.musicSinger || '歌手名称' }}-</p>
